--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   google_nav_bar: ^5.0.6
   font_awesome_flutter: ^10.7.0
+  url_launcher: ^6.3.0
+  barcode_widget: ^2.0.4
 
 dev_dependencies:
   flutter_test:
