--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   url_launcher: ^6.3.0
   barcode_widget: ^2.0.4
+  http: ^1.2.1
+  logger: ^2.3.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
