--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   http: ^1.2.1
   logger: ^2.3.0
   shared_preferences: ^2.2.3
+  webview_flutter: ^4.8.0
+  intl: ^0.19.0
+  numberpicker: ^2.1.2
 
 dev_dependencies:
   flutter_test:
