--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   webview_flutter: ^4.8.0
   intl: ^0.19.0
   numberpicker: ^2.1.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
