--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   numberpicker: ^2.1.2
   shimmer: ^3.0.0
   qrscan: ^0.3.3
+  geolocator: ^12.0.0
 
 dev_dependencies:
   flutter_test:
