--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shimmer: ^3.0.0
   qrscan: ^0.3.3
   geolocator: ^12.0.0
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
